- Fix for bug #8367 (wordwrap not cutting correctly)